@@ -1,0 +1,1 @@
+usr/lib/python*/site-packages/apport/*
